# ita_root/ita_api_organization/openapi.yaml
@@ -5,6 +5,8 @@ info:
   title: ITA Version2.0 API
 tags:
 
+  - name: Workspace Create
+    description: ワークスペース作成
   - name: Menu Info
     description: メニュー情報の取得
   - name: Menu Filter
@@ -14,6 +16,35 @@ tags:
   - name: Menu MaintenanceAll
     description: レコードの一括操作（登録/更新/廃止/復活/物理削除）
 paths:
+  /api/workspaces/{workspace_id}/:
+    get:
+      tags:
+        - Workspace Create
+      description: ワークスペースを作成する
+      operationId: workspaceCreate
+      parameters:
+        - name: workspace_id
+          in: path
+          description: ワークスペース名
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  type: string
+                properties: 
+                  {}
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal Server Error
+
   /api/menu/{workspace}/{menu}/info/:
     get:
       tags:
@@ -51,12 +82,48 @@ paths:
           description: Bad Request
         '500':
           description: Internal Server Error
+          
+  /api/menu/{workspace}/{menu}/info/basic/:
+    get:
+      tags:
+        - Menu Info
+      description: メニューの基本情報を取得する
+      operationId: getBasicInfo
+      parameters:
+        - name: workspace
+          in: path
+          description: ワークスペース名
+          required: true
+          schema:
+            type: string
+        - name: menu
+          in: path
+          description: メニュー名
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  type: string
+                properties:
+                  BASIC_INFO:
+                    $ref: '#/components/schemas/BASIC_INFO'
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal Server Error
   
   /api/menu/{workspace}/{menu}/info/column/:
     get:
       tags:
         - Menu Info
-      description: レコード操作に必要な項目情報を取得する
+      description: メニューの項目情報を取得する
       operationId: getColumnInfo
       parameters:
         - name: workspace
@@ -81,7 +148,8 @@ paths:
                 items:
                   type: string
                 properties:
-                  {}
+                  COLUMN_INFO:
+                    $ref: '#/components/schemas/COLUMN_INFO'
         '400':
           description: Bad Request
         '500':
